Fix site breaks overflow
Remove decorator container
Remove site container
Add `scroll` class to the header when scroll

--- a/src/assets/styles/components/header.scss
+++ b/src/assets/styles/components/header.scss
@@ -39,7 +39,7 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 0.5rem;
-  background-color: var(--transparentPrimary);
+  background-color: var(--primary);
   transform: translateX(100%);
   transition: $site-transition;
   @include container-shadow;
