--- a/src/assets/styles/foundation/_mixins.scss
+++ b/src/assets/styles/foundation/_mixins.scss
@@ -19,7 +19,7 @@
 }
 
 @mixin container-shadow {
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 10px var(--transparentAccent);
 }
 
 @mixin button {
